@@ -1322,6 +1322,18 @@ Then check that $\lt{R}{\vect{y}}=9+9x$.
 <exercise type="T" number="10" rough="when is pre-image a subspace">
 <problem contributor="robertbeezer">Suppose $\ltdefn{T}{U}{V}$ is a linear transformation.  For which vectors $\vect{v}\in V$ is $\preimage{T}{\vect{v}}$ a subspace of $U$?
 </problem>
+<solution contributor="robertbeezer">
+Suppose that $\preimage{T}{\vect{v}}$ is a subspace of $U$.  Then $\preimage{T}{\vect{v}}$ is nonempty so we can apply <acroref type="theorem" acro="KPI" />, and assert the existence of a vector $\vect{u}\in\preimage{T}{\vect{v}}$ so that $\preimage{T}{\vect{v}}=\vect{u}+\krn{T}$.  Furthermore, if $\preimage{T}{\vect{v}}$ is a subspace, then $\zerovector\in\preimage{T}{\vect{v}}$, so there exists a vector $\vect{z}\in\krn{T}$ such that $\zerovector=\vect{u}+\vect{z}$.  Now
+<alignmath>
+\vect{v}<![CDATA[&=]]>\vect{v}+\zerovector<![CDATA[&&]]><acroref type="property" acro="Z" />\\
+<![CDATA[&=]]>\vect{v}+\lt{T}{\vect{z}}<![CDATA[&&]]><acroref type="definition" acro="KLT" />\\
+<![CDATA[&=]]>\lt{T}{\vect{u}}+\lt{T}{\vect{z}}<![CDATA[&&]]><acroref type="definition" acro="PI" />\\
+<![CDATA[&=]]>\lt{T}{\vect{u}+\vect{z}}<![CDATA[&&]]><acroref type="definition" acro="LT" />\\
+<![CDATA[&=]]>\lt{T}{\zerovector}\\
+<![CDATA[&=]]>\zerovector<![CDATA[&&]]><acroref type="theorem" acro="LTTZZ" />\\
+</alignmath>
+So we our hypothesis that the preimage is a subspace has lead to the conclusion that $\vect{v}$ could only be one vector, the zero vector.  We still need to verify that $\preimage{T}{\zerovector}$ is indeed a subspace, but since $\preimage{T}{\zerovector}=\krn{T}$ this is just <acroref type="theorem" acro="KLTS" />.
+</solution>
 </exercise>
 
 <exercise type="T" number="15" rough="kernels and compositions">
