@@ -1,5 +1,6 @@
 v3.xx 2013//
 ~~~~~~~~~~~~~~~~
+New: Exercise ILT.T10, solution added
 Edit: Clarified lead-in to Theorem PSSD (Michael DuBois)
 Edit: Example CAEHW, added an "and" (Anna Dovzhik)
 Edit: Example BDE, removed stale link (Anna Dovzhik)
